--- a/css/application.css
+++ b/css/application.css
@@ -5,7 +5,7 @@
 body {
   font-size: 1em;
   line-height: 1.5;
-  color: #878787;
+  color: red;
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
@@ -17,12 +17,13 @@ h2 {
   font-size: 3.3125em;
   line-height: 1.1;
   font-weight: normal;
+  color: red;
   margin: 0 0 .5em; }
 
 h3 {
   font-size: 1.25em;
   line-height: 1.2;
-  color: #48525c;
+  color: red;
   margin-bottom: 1.7em; }
 
 img {
@@ -139,19 +140,20 @@ a:hover {
   font-size: 5.625rem;
   line-height: 1.3;
   font-weight: normal;
-  color: #fff;
+  color: red;
   text-transform: uppercase;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
   margin: 12px 0 0; }
   @media (max-width: 768px) {
     .main-heading {
       font-size: 5rem;
-      line-height: 1.1; } }
+      line-height: 1.1;
+      color: red; } }
 
 .main-title {
   font-size: 1.625rem;
   font-weight: 200;
-  color: #fff;
+  color: red;
   letter-spacing: .065em;
   border-bottom: 2px solid;
   padding-bottom: 10px; }
@@ -163,7 +165,7 @@ a:hover {
 .intro {
   font-size: 1.25em;
   line-height: 1.6;
-  color: initial; }
+  color: red; }
   @media (max-width: 768px) {
     .intro {
       font-size: 1rem; } }
